syntax = "proto3";

package user;
option go_package = "./userservice";


message GetUserByEmailRequest {
    string email = 1;
}

message GetUserByProviderRequest {
    string provider = 1; // google, apple
    UUID provider_id = 2;
}

message CreateUserWithEmailRequest {
    string email = 1;
    string name = 2;
    string username = 3;
}

message CreateUserWithProviderRequest {
    string provider = 1; // google, apple
    string provider_id = 2;
    string name = 3;
    string username = 4;
}

message UpdateUserAchievementsRequest {
    UUID user_id = 1;
    int32 sets = 2;
}

enum CreateUserStatus {
    CREATED = 0;
    CREATE_FAILED = 1;
    ALREADY_EXISTS = 2;
    VALIDATION_FAILED = 3;
}

message UUID {
    string value = 1;
}

enum GetUserResponseStatus {
    SUCCESS = 0;
    FAILED = 1;
    NOT_FOUND = 2;
}

message GetUserResponse {
    GetUserResponseStatus status = 1;
    optional string name = 2;
    optional string username = 3;
    optional UUID userId = 4;
}

message CreateUserResponse {
    CreateUserStatus status = 1;
    optional UUID userId = 2;
    optional string name = 3;
    optional string username = 4;
}

message UpdateUserAchievementsResponse {
    GetUserResponseStatus status = 1;
}

service UserService {
    rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserResponse);
    rpc GetUserByProvider(GetUserByProviderRequest) returns (GetUserResponse);
    rpc CreateUserWithEmail(CreateUserWithEmailRequest) returns (CreateUserResponse);
    rpc CreateUserWithProvider(CreateUserWithProviderRequest) returns (CreateUserResponse);
}

service CardService {
    rpc UpdateUserAchievements(UpdateUserAchievementsRequest) returns (UpdateUserAchievementsResponse);
}